--- a/SobreCargas/CMakeLists.txt
+++ b/SobreCargas/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(SobreCargas main.cpp
         Utils.h
         SobreCargas.cpp
-        SobreCargas.hpp)
+        SobreCargas.hpp
+        Persona.hpp)
