--- a/Ejercio_SobreCargas/CMakeLists.txt
+++ b/Ejercio_SobreCargas/CMakeLists.txt
@@ -3,4 +3,10 @@ project(Ejercio_SobreCargas)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Ejercio_SobreCargas main.cpp)
+add_executable(Ejercio_SobreCargas main.cpp
+        Estructuras.hpp
+        utils.hpp
+        SobreCargas.hpp
+        SobreCargas.cpp
+        Funciones.hpp
+        Funciones.cpp)
